apps/documentation/versioned_docs/version-2.5.0/luos-technology/node/topology.mdx
---
custom_edit_url: null
image: /assets/images/Network_Luos_1.png
---

import { customFields } from '/docusaurus.config.js';
import Tooltip from '@site/src/components/Tooltip.js';
import Image from '@site/src/components/Images.js';

# Network topology

The nodes can access the position of every other node in the network at any time, by accessing a specific structure called routing table. The routing table is designed and shared among the nodes after the execution of a devoted process called detection.

This routing table allows any service to find, locate, and use any other service on the entire network.

## [Routing Table](/documentation/luos-technology/services/routing-table)

The [Routing Table](/documentation/luos-technology/services/routing-table) is a feature of Luos allowing every <Tooltip def={customFields.node_def}>node</Tooltip> to own a "map" (or topology) of the entire network of your device. This map allows nodes to know their physical position and different functionalities, as well as to easily search and interact with the other nodes.

The [Routing Table](/documentation/luos-technology/services/routing-table) is designed and shared among all the nodes after a process that is called [detection](/documentation/luos-technology/services/routing-table).

:::info
More details about routing table on the [dedicated page](/documentation/luos-technology/services/routing-table).
:::

## PTP Network

PTP is the Point-To-Point connection between nodes used for topology detection by some networks (specially Robus). Every node should have between two to eight PTP connections representing ports. At this time, these wires are mandatory with a Robus network.

### Daisy-chain

With two PTP pins per board, you must chained your device as below:

<div align="center">
  <Image src="/assets/images/daisy_chain.svg" darkSrc="/assets/images/daisy_chain_white.svg" />
</div>

### Star Mounting

With at least three PTP pins per board, you can create a star mounting configuration:

<div align="center">
  <Image src="/assets/images/star_mounting.svg" darkSrc="/assets/images/star_mounting_white.svg" />
</div>
