apps/documentation/versioned_docs/version-2.6.0/luos-technology/node/topology.mdx
---
custom_edit_url: null
image: /assets/images/Network_Luos_1.png
---

import { customFields } from '/docusaurus.config.js';
import Tooltip from '@site/src/components/Tooltip.js';
import Image from '@site/src/components/Image';

# Network topology

The nodes can access the position of every other node in the network at any time, by accessing a specific structure called routing table. The routing table is designed and shared among the nodes after the execution of a devoted process called detection.

This routing table allows any service to find, locate, and use any other service on the entire network.

## [Routing table](../services/routing-table)

The [Routing table](../services/routing-table) is a feature of Luos allowing every <Tooltip def={customFields.node_def}>node</Tooltip> to own a "map" (or topology) of the entire network of your device. This map allows nodes to know their physical position and different functionalities, as well as to easily search and interact with the other nodes.

The [Routing table](../services/routing-table) is designed and shared among all the nodes after a process called [detection](../services/routing-table). Each node generates a local routing table at detection, containing the list of its services and PTP connections to the node that started the detection. The node that started the topology detection agglomerates all the local routing tables generated by other nodes and generates a global routing table. By default, the routing table is shared with all the nodes.
The routing table is not necessary for a node, especially if there are only driver services. In this particular case, you may define `NO_RTB` in the file _node_config.h_ in the project to spare some memory.

<a
  href="../services/routing-table"
  target="_blank"
  className="pagination-nav__link"
  style={{ display: 'inline-block' }}
>
  Know more about the routing table
</a>

## PTP Network

PTP is the Point-To-Point connection between nodes used for topology detection by some networks (specially [Robus](./luos-hal#robus-hal)). Every node should have between two to eight PTP connections representing ports. At this time, these wires are mandatory with a Robus network.

### Daisy-chain

With two PTP pins per board, you must chained your device as below:

<div align="center">
  <Image
    sources={{
      light: '/assets/images/daisy_chain.svg',
      dark: '/assets/images/daisy_chain_white.svg',
    }}
  />
</div>

### Star Mounting

With at least three PTP pins per board, you can create a star mounting configuration:

<div align="center">
  <Image
    sources={{
      light: '/assets/images/star_mounting.svg',
      dark: '/assets/images/star_mounting_white.svg',
    }}
  />
</div>
